--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Tela de Login</h1>
-    
+    <main>
+        <section id="login">
+            <div id="imagem">
+                <!--aqui fica a imagem no css-->
+            </div>
+
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faca login para acessar sua conta e poder fazer as configuracoes noo seu ambiente.</p>
+                <form action="login.php" method= "post">
+                </form>
+            </div> 
+        </section>
+    </main>
 </body>
 </html>
