--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
                 <form action="login.php" method= "post" autocomplete="on">
                     <div class="campo">  
-                        <i class="material-symbols-outlined">person</i>                                           
-                        <input type="email" name="loguin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
-                        <label for="iloguin">Login</label>
+                        <i class="material-symbols-outlined">person</i>                                      
+                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
                     </div>
 
                     <div class="campo">
@@ -33,7 +33,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="Esqueci a Senha" class="botao" >Esqueci a Senha <i class="material-symbols-outlined">mail</i>  </a>
+                    <a href="Esqueci.html" class="botao" >Esqueci a Senha <i class="material-symbols-outlined">mail</i>  </a>
                 </form>
             </div> 
         </section>
