--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title> 
+    <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" /><!--google icon > clicar no icone > na alateral clicr em "Material Symbols guide" > na lateral direita clicar em "usar na Web" > na caixa "Como usar simbolos do material Design" copiar o link do html -->
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <!--google icon > clicar no icone > na alateral clicr em "Material Symbols guide" > na lateral direita clicar em "usar na Web" > na caixa "Como usar simbolos do material Design" copiar o link do html -->
 </head>
 <body>
     <main>
@@ -19,24 +18,24 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faca login para acessar sua conta e poder fazer as configuracoes no seu ambiente.</p>
-
                 <form action="login.php" method= "post" autocomplete="on">
-                    <div class="campo">  
-                        <i class="material-symbols-outlined">person</i>                                      
-                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+                    <div class="campo">
+                        <i class="material-symbols-outlined">person</i>  
+                        <input type="email" name="login" id="ilogin" placeholder="seu E-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
 
-                    <div class="campo">
-                        <i class="material-symbols-outlined">vpn_key</i>                          
+                    <div class="campo">                      
+                        <i class="material-symbols-outlined">vpn_key</i>  
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
-                    <input type="submit" value="Entrar">
-                    <a href="Esqueci.html" class="botao" >Esqueci a Senha <i class="material-symbols-outlined">mail</i>  </a>
+                        <input type="submit" value="Entrar">
+                        <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-symbols-outlined">mail</i></a>
                 </form>
             </div> 
         </section>
     </main>
 </body>
-</html>
+</html>                                   
+  
